Resolve "Fix dark mode inconsistencies identified"

--- a/apps/block_scout_web/assets/css/components/_address-overview.scss
+++ b/apps/block_scout_web/assets/css/components/_address-overview.scss
@@ -1,7 +1,6 @@
 .address-detail-hash-title {
   color: #333;
   font-size: 14px;
-  font-weight: bold;
   line-height: 1.2;
   text-align: left;
   word-break: break-all;
