--- a/apps/block_scout_web/assets/css/components/_dropdown.scss
+++ b/apps/block_scout_web/assets/css/components/_dropdown.scss
@@ -38,7 +38,7 @@ $dropdown-menu-item-hover-background: rgba($secondary, 0.1) !default;
 .dropdown-item {
   color: $dropdown-menu-item-color;
   font-size: 12px;
-  padding: 10px 20px;
+  padding: 10px 28px;
   transition: $transition-cont;
   white-space: initial;
 
